# xs-earthwork-takeoff

./: .gitignore  LICENSE  README.md  pyproject.toml
src/xstakeoff/: cli.py  pdf_extract.py
