[project]
name = "xstakeoff"
version = "0.1.0"
description = "Vector-first cross section takeoff tool"
requires-python = ">=3.11"
dependencies = [
  "PyMuPDF>=1.24.0",
  "pandas>=2.0.0",
  "openpyxl>=3.1.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
